--- a/Bootstrap-5/sunzhine/index.html
+++ b/Bootstrap-5/sunzhine/index.html
@@ -28,8 +28,8 @@
             <a class="nav-link" href="#">ALBUMS</a>
           </li>
           <li class="nav-item pe-4">
-            <!-- <a class="nav-link" href="#">ABOUT</a> -->
-            
+            <a class="nav-link" href="#">ABOUT</a>
+
           </li>
           <li class="nav-item pe-4">
             <a class="nav-link" href="#">BLOG</a>
@@ -46,14 +46,30 @@
       </div>
     </div>
   </nav>
-  <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover"
-  data-bs-placement="bottom" data-bs-content="THIS IS ABOUT US">About</button>
+    <div class="container">
+      <div class="row">
+        <div class="col-12 hero ms-3 me-3">
+          <p>HELLO! WELCOME TO SUNZINE PHOTO GALLERY WITH CREATIVE & UNIQUE STYLE</p>
+        </div>
+
+        <div class="container">
+          <div class="row">
+            <ul class="list-group list-group-horizontal">
+              <li class="list-group-item"> ALL</li>
+              <li class="list-group-item">• &nbsp; PHOTOGRAPHY</li>
+              <li class="list-group-item">• &nbsp; TRAVEL</li>
+              <li class="list-group-item">• &nbsp; NATURE</li>
+              <li class="list-group-item">• &nbsp; FASHION</li>
+              <li class="list-group-item">• &nbsp; LIFE STYLE</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 
 </html>
