--- a/Bootstrap-5/sunzhine/index.html
+++ b/Bootstrap-5/sunzhine/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 
-<body> 
+<body>
   <nav class="navbar navbar-expand-lg  mt-3 sticky-top light">
     <div class="container">
       <a class="navbar-brand ms-5" href="#"><img src="./images/logo.png" alt=""></a>
@@ -46,52 +46,72 @@
       </div>
     </div>
   </nav>
-    <div class="container">
-      <div class="row">
-        <div class="col-12 hero ms-3 me-3">
-          <p>HELLO! WELCOME TO SUNZINE PHOTO GALLERY WITH CREATIVE & UNIQUE STYLE</p>
-        </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-12 hero ms-3 me-3">
+        <p>HELLO! WELCOME TO SUNZINE PHOTO GALLERY WITH CREATIVE & UNIQUE STYLE</p>
+      </div>
 
-        <div class="container">
-          <div class="row">
-            <ul class="list-group list-group-horizontal">
-              <li class="list-group-item"> ALL</li>
-              <li class="list-group-item">• &nbsp; PHOTOGRAPHY</li>
-              <li class="list-group-item">• &nbsp; TRAVEL</li>
-              <li class="list-group-item">• &nbsp; NATURE</li>
-              <li class="list-group-item">• &nbsp; FASHION</li>
-              <li class="list-group-item">• &nbsp; LIFE STYLE</li>
-            </ul>
-          </div>
+      <div class="container">
+        <div class="row">
+          <ul class="list-group list-group-horizontal">
+            <li class="list-group-item"> ALL</li>
+            <li class="list-group-item">• &nbsp; PHOTOGRAPHY</li>
+            <li class="list-group-item">• &nbsp; TRAVEL</li>
+            <li class="list-group-item">• &nbsp; NATURE</li>
+            <li class="list-group-item">• &nbsp; FASHION</li>
+            <li class="list-group-item">• &nbsp; LIFE STYLE</li>
+          </ul>
         </div>
       </div>
     </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <div class="text-center">
-            <img src="./images/1.jpg" alt="" class="rounded" width="250px" height="300px">
-            <img src="./images/2.jpg" alt=""class="rounded" width="250px" height="300px">
-            <img src="./images/3.jpg" alt=""class="rounded" width="250px" height="300px">
-            <img src="./images/4.jpg" alt=""class="rounded" width="250px" height="300px">
-            <img src="./images/5.jpg" alt=""class="rounded" width="250px" height="300px">
-            <img src="./images/6.jpg" alt=""class="rounded" width="250px" height="300px">
-            <img src="./images/7.jpg" alt=""class="rounded" width="250px" height="300px">
-            <img src="./images/8.jpg" alt=""class="rounded" width="250px" height="300px">
-            <img src="./images/9.jpg" alt=""class="rounded" width="250px" height="300px">
-            <img src="./images/10.jpg" alt=""class="rounded" width="250px" height="300px">
-            <img src="./images/" alt=""class="rounded" width="250px" height="300px">
-            <img src="./images/" alt=""class="rounded" width="250px" height="300px">
-            <img src="./images/" alt=""class="rounded" width="250px" height="300px">
-            <img src="./images/" alt=""class="rounded" width="250px" height="300px">
-            <img src="./images/" alt=""class="rounded" width="250px" height="300px">
-          </div>
+  </div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12">
+        <div class="text-center gallery">
+          <img src="./images/1.jpg" alt="" class="rounded" width="240px" height="300px">
+          <img src="./images/2.jpg" alt="" class="rounded" width="240px" height="300px">
+          <img src="./images/3.jpg" alt="" class="rounded" width="240px" height="300px">
+          <img src="./images/4.jpg" alt="" class="rounded" width="240px" height="300px">
+          <img src="./images/5.jpg" alt="" class="rounded" width="240px" height="300px">
+          <img src="./images/6.jpg" alt="" class="rounded" width="240px" height="300px">
+          <img src="./images/7.jpg" alt="" class="rounded" width="240px" height="300px">
+          <img src="./images/8.jpg" alt="" class="rounded" width="240px" height="300px">
+          <img src="./images/9.jpg" alt="" class="rounded" width="240px" height="300px">
+          <img src="./images/10.jpg" alt="" class="rounded" width="240px" height="300px">
+          <img src="./images/11.jpg" alt="" class="rounded" width="240px" height="300px">
+          <img src="./images/12.jpg" alt="" class="rounded" width="240px" height="300px">
+          <img src="./images/13.jpg" alt="" class="rounded" width="240px" height="300px">
+          <img src="./images/14.jpg" alt="" class="rounded" width="240px" height="300px">
+          <img src="./images/15.jpg" alt="" class="rounded" width="240px" height="300px">
         </div>
       </div>
     </div>
-
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  </div>
+  <div class="d-flex justify-content-center mt-5 mb-5">
+    <div class="spinner-grow" role="status">
+      <span class="visually-hidden">Loading...</span>
+    </div>
+  </div>
+  <footer class="bg-dark pt-5">
+    <div class="container text-center">
+      <div class="row">
+        <div class="col-12 footer">
+          <img src="./images/footer-logo.png" alt="" class="text-white">
+          <p class="text-white">Copyright © 2024 All rights reserved | This template is made with  by Muhammad Hussain</p>
+          <div class="footer-icons">
+            <i class="fa-brands fa-facebook text-white"></i>
+            <i class="fa-brands fa-twitter text-white"></i>
+            <i class="fa-brands fa-instagram text-white"></i>
+        </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
