--- a/Bootstrap-5/gmail/index.html
+++ b/Bootstrap-5/gmail/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-<nav class="navbar fixed-top col-lg-12 col-md-12 col-sm-12 d-flex flex-nowrap w-100">
+<nav class="navbar col-lg-12 col-md-12 col-sm-12 d-flex flex-nowrap w-100">
     <div class="container-fluid">
         <button class="navbar-toggler me-3 col-lg-1 col-sm-1 border-0 nav-btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -67,6 +67,13 @@
 
     </div>
   </nav>
+   
+
+
+
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/852ad1a7e8.js" crossorigin="anonymous"></script>
 </body>
 </html>
